[speaker] clean html & css around the avatar-form to fix misalignments

--- a/src/pretalx/static/cfp/scss/_layout.scss
+++ b/src/pretalx/static/cfp/scss/_layout.scss
@@ -111,13 +111,7 @@ footer {
 .avatar-form {
   display: flex;
   align-items: flex-start;
-  margin-left: 20px;
-  padding-bottom: 8px;
 
-  .left-side {
-    margin-left: -20px;
-    margin-right: 20px;
-  }
   img.avatar {
     padding-right: 16px;
     margin-left: -16px;
@@ -129,13 +123,19 @@ footer {
     display: flex;
     flex-direction: column;
 
-    .user-avatar-display .bootstrap4-multi-input {
+    .bootstrap4-multi-input,
+    .bootstrap4-multi-input > .col-12 {
       margin: 0;
+      padding: 0;
     }
 
     .form-group {
       display: flex;
       flex-direction: column;
+    }
+
+    .user-avatar-display .form-group {
+      margin-bottom: 0;
     }
   }
 }
